# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/).

## [Unreleased]

_Most likely to be released on July 1st._

### Added
- Soft lock.  #958
- Auto lock.  #1027
- Dedicated `initialized` field in storage.

### Deprecated

### Removed

### Fixed
- Fix cancel icon in PIN dialog.  #1042
- Fix repaint bug in QR code rendering.  #1067

### Security


------------

### Older changelog:

Version 2.3.1 [Jun 2020]
* Refactor Bitcoin signing
* Refactor Keychain into a decorator
* Stream previous tx also for Segwit inputs

Version 2.3.0 [Apr 2020]
* Passphrase redesign
* Cache up to 10 sessions (passphrases)
* SD card protection
* Properly limit passphrase to 50 bytes and not 50 characters
* Monero: add confirmation dialog for unlock_time
* Show xpubs with multisig get_address
* Upgrade MicroPython to 1.12
* Introduce FatFS (version 0.14)
* Support Ed25519 in FIDO2

Version 2.2.0 [Jan 2020]
* Remove unused ButtonRequest.data field
* Rework Recovery persistence internally
* Disallow changing of settings via dry-run recovery
* Add feature to retrieve the next U2F counter
* Fix continuous display blinking with Android in U2F
* U2F UX improvements
* Wipe code
* Add screen for time bounds in Stellar

Version 2.1.8 [Nov 2019]
* Support Tezos 005-BABYLON hardfork
* Show XPUBs in GetAddress for multisig
* Security improvements

Version 2.1.7 [Oct 2019]
* Fix low memory issue

Version 2.1.6 [Oct 2019]
* Refactor Shamir related codebase
* Super Shamir
* FIDO2
* FIDO2 credential management via trezorctl
* BackupType in Features
* Fix storage keys module visbility bug (6ad329) introduced in 2.1.3 (46e4c0) which was breaking fw upgrades

Version 2.1.5 [Sep 2019]
* Fix for sluggish U2F authentication when using Shamir
* Fix UI for Shamir with 33 words
* Fix Wanchain signing
* Binance Coin support
* Introduce Features.Capabilities

Version 2.1.4 [Aug 2019 hotfix]